The project finished for the mini project evaluation